# cex-npu-windows

./: README.md
driver/wddm/: cex_virt_npu.c  cex_virt_npu.h  cex_virt_npu.inf
ep/: CMakeLists.txt  cex_npu_ep.cpp
proxy/: cex_npu_proxy.py  install_client.ps1  requirements.txt
shared/: cex_npu_protocol.py
